<resources>
    <string name="app_name">Munche Restaurant Partner</string>
    <string name="appName">Munche</string>
    <string name="restaurant_partner">Restaurant Partner</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="send_otp">Send OTP</string>
    <string name="termsandconditions">By Continuing. you agree to our terms of Service Privacy Policy and Content Policy</string>
    <string name="textOtpVer">OTP Verification</string>
    <string name="userNum">Enter the OTP sent to</string>
    <string name="add_your_restaurant">Add Your Restaurant</string>
    <string name="restaurant_name">Restaurant Name *</string>
    <string name="your_restaurant_name">Your Restaurant Name</string>
    <string name="city">City *</string>
    <string name="restaurant_s_city">Restaurant\'s City</string>
    <string name="are_you_the_owner_or_the_manager_of_this_restaurant">Are You The Owner or the Manager of this Restaurant ? *</string>
    <string name="owner">Owner</string>
    <string name="manager">Manager</string>
    <string name="phone_number">Phone Number</string>
    <string name="restaurant_s_phone_number">Restaurant\'s Phone Number *</string>
    <string name="address">Address</string>
    <string name="restaurant_s_address">Restaurant\'s Address *</string>
    <string name="save_submit"><![CDATA[Save & Submit]]></string>
    <string name="orders">Orders</string>
    <string name="menu">Menu</string>
    <string name="sales">Sales</string>
    <string name="my_profile">My Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">LOGOUT</string>
    <string name="restaurant_name_text">Restaurant Name Text</string>
    <string name="accepting_orders">Accepting Orders</string>
    <string name="payment_settings">Payment Settings</string>
    <string name="prep_time">Item Prep Time</string>
    <string name="change_address">Change Address</string>
    <string name="create_menu">Create Your Restaurant Menu</string>
    <string name="create">Create</string>
    <string name="choose_category">Choose Category</string>
    <string name="create_a_new_menu_item">Create a New Menu Item</string>
    <string name="menu_item_price">Item Price *</string>
    <string name="item_specification">Item Specification</string>
    <string name="write_a_short_description">Write a short Description (optional)</string>
    <string name="average_price_per_person">Average Price Per Person *</string>
    <string name="default_notification_channel_id">MUNCHE_CH_25</string>
    <string name="decline">Decline</string>
    <string name="accept_order">Accept Order</string>
    <string name="please_set_the_preparation_time_of_each_time_item_you_need_to_prepare">Please set the preparation time of each item you need to prepare</string>
    <string name="restaurant_cuisines">Restaurant Cuisines *</string>
    <string name="select_cuisines">Select Cuisines</string>
</resources>