<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.CreateNewMenuFragment"
    android:padding="17dp">

    <TextView
        android:id="@+id/chooseCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_category"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="17sp"/>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/chooseCategorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseCategoryText"
        android:layout_marginTop="9dp"
        app:ms_background_color="@color/white" />

    <TextView
        android:id="@+id/createMenuItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_menu_item"
        android:layout_below="@+id/chooseCategorySpinner"
        android:layout_marginTop="17dp"
        android:textSize="17sp"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/newMenuItemEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createMenuItemText"
        android:background="@drawable/create_menu_background"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/colorAccent"
        android:hint="Menu Item"/>

    <TextView
        android:id="@+id/itemSpecification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_specification"
        android:layout_below="@+id/newMenuItemEditText"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"/>

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/itemSpecification"
        android:layout_marginTop="15dp"
        android:weightSum="3">

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/foodVegOrNotSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/menuItemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="20dp"
            android:background="@drawable/create_menu_background"
            android:hint="@string/menu_item_price"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorAccent"
            android:inputType="number"/>

    </LinearLayout>

    <EditText
        android:id="@+id/menuItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_below="@+id/linearContainer"
        android:layout_marginTop="17dp"
        android:background="@drawable/createres_background_field"
        android:hint="@string/write_a_short_description"
        android:maxLines="4"/>

    <Button
        android:id="@+id/saveItemInfoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menuItemDescription"
        android:layout_marginTop="27dp"
        android:background="@drawable/login_btn_background"
        android:text="Save"
        android:textAllCaps="false"
        android:textColor="@color/lightWhite"
        android:textSize="17sp"
        android:fontFamily="@font/open_sans_semibold"/>

</RelativeLayout>